--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,7 +9,7 @@
   <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
 <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="../styles/style.css">
 
   
 </head>
@@ -42,7 +42,7 @@
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 <!-- <script src='js/local.js'></script> -->
 
-    <script src="js/index.js"></script>
+    <script src="../scripts/js/index.js"></script>
 
 </body>
 </html>
