--- a/app/views/list.html
+++ b/app/views/list.html
@@ -11,8 +11,8 @@
   <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 
-  <link rel="stylesheet" href="css/list.css">
-  <link rel="stylesheet" href="css/dataTable.css">
+  <link rel="stylesheet" href="../styles/list.css">
+  <link rel="stylesheet" href="../styles/dataTable.css">
 
   
 </head>
@@ -182,8 +182,8 @@
   </script>
 <!-- <script src='js/local.js'></script> -->
 
-<script src="js/list.js"></script>
-<script src="js/demo_list.js"></script>
+<script src="../scripts/js/list.js"></script>
+<script src="../scripts/js/demo_list.js"></script>
 
 
 </body>
