update on home page

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,19 +15,19 @@
     <div class="container">
     <div class="row btn-row">
     
-      <div class="col-sm-6">
-        <button href="create.html" type="button" class="btn btn-lg green btn-outline">New Report</button>
+      <div class="col-sm-6 btn btn-lg green btn-outline">
+        <a href="create.html" type="button" class="">New Report</a>
       </div>
-      <div class="col-sm-6">
-        <button href="list.html" type="button" class="btn btn-lg green btn-outline">Reports</button>
+      <div class="col-sm-6 btn btn-lg green btn-outline">
+        <a href="list.html" type="button" class="">Reports</a>
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-6">
-        <button href="settings.html" type="button" class="btn btn-lg green btn-outline">Settings</button>
+      <div class="col-sm-6 btn btn-lg green btn-outline">
+        <a href="settings.html" type="button" class="">Settings</a>
       </div>
-      <div class="col-sm-6">
-        <button href="profile.html" type="button" class="btn btn-lg green btn-outline">Profile</button>
+      <div class="col-sm-6 btn btn-lg green btn-outline">
+        <a href="profile.html" type="button" class="">Profile</a>
       </div>
       </div>
     </div>
