--- a/app/views/main.html
+++ b/app/views/main.html
@@ -53,12 +53,12 @@
   <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <tr>
+                <th>Id</th>
+                <th>Start date</th>
+                <th>Area</th>
                 <th>Category</th>
                 <th>Status</th>
-                <th>Start date</th>
-                <th>Description</th>
-                <th>Comments</th>
-                <th>Address</th>
+                <th>Assigned to</th>
             </tr>
         </thead>
         <tfoot>
