updated header styles in report

--- a/app/views/reportadd.html
+++ b/app/views/reportadd.html
@@ -15,7 +15,7 @@
     <div class="row">
     <div class="col-sm-12">
     <div class="col-sm-6">
-      <legend>Call Details:</legend>
+      <legend>Call Details</legend>
       <div class="form-group">
         <label>Start time:</label> 
         <input class="form-control" type="date" name="startDate" autocomplete=on />
@@ -82,7 +82,7 @@
         <textarea class="form-control" rows="5" id="complaintDetails"></textarea>
       </div>
 
-      <legend> Follow-up</legend>
+      <legend>Follow-up</legend>
       <div class="form-group">
         <label>Status:</label>
         <select class="selectpicker form-control form-control-sm" name="status">
@@ -93,7 +93,7 @@
         </select>
       </div>
       <div class="form-group">
-        <label>Actions taken</label> 
+        <label>Actions taken:</label> 
         <textarea class="form-control" rows="4" id="actionsTaken"></textarea>
       </div>
       <div class="form-group">
@@ -116,7 +116,7 @@
       </div>
       <div class="checkbox">
         <label>
-          <input type="checkbox form-control-lg" name="feedback"> Feedback to citizen 
+          <input type="checkbox" name="feedback"> Feedback to citizen 
         </label>
       </div>
       </div>
