--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -91,9 +91,9 @@ legend {
     width: 100%;
     padding: 0;
     margin-bottom: 20px;
-    font-size: 14px;
+    font-size: 18px;
     line-height: inherit;
-    color: #333;
+    color: #33b5e5;
     border: 0;
     border-bottom: 1px solid #e5e5e5;
 }
