Updates on creating report ui (#5)
Update report creation UI

* added more fields in report creation

* updated header styles in report

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -86,5 +86,16 @@ body {
   margin-bottom:2%;
 }
 
+legend {
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin-bottom: 20px;
+    font-size: 18px;
+    line-height: inherit;
+    color: #33b5e5;
+    border: 0;
+    border-bottom: 1px solid #e5e5e5;
+}
 
 
