--- a/app/views/reportadd.html
+++ b/app/views/reportadd.html
@@ -1,30 +1,133 @@
 
-  
+
 <!-- Form Mixin-->
 <!-- Input Mixin-->
 <!-- Button Mixin-->
 <!-- Pen Title-->
 <div class="pen-title">
-  <h1>Create new report</h1>
+  <h2>Create new report</h2>
 </div>
 <!-- Form Module-->
-<div class="module form-module">
+<div class="module form-module add-report">
   <div class="form" >
     <h2>Report details</h2>
-    <form>
-      <label>Client:</label> <input type="text"/>
-      <label>API:</label> <input type="text" required/>
-      <label>Address:</label> <input type="text" />
-      <label>Category:</label> <input type="text" />
-      <label>Description:</label> <textarea rows="4" cols="50" ></textarea>
-      <hr>
-      <label>Status:</label> <input type="text" />
-      <label>Comment:</label> <input type="text" />
-      
+    <form class="">
+    <div class="row">
+    <div class="col-sm-12">
+    <div class="col-sm-6">
+      <legend>Call Details</legend>
+      <div class="form-group">
+        <label>Start time:</label> 
+        <input class="form-control" type="date" name="startDate" autocomplete=on />
+      </div>
+      <div class="form-group">
+        <label>End time:</label> 
+        <input class="form-control" type="date" name="endDate" autocomplete=on />
+      </div>
+
+      <legend> Client details</legend>
+      <div class="form-group">
+        <label>Name</label> 
+        <input class="form-control" type="text" name="clientName" />
+      </div>
+      <div class="form-group">
+        <label>Account number</label> 
+        <input class="form-control" type="text" name="accountNumber" />
+      </div>
+
+      <div class="form-group">
+        <label>Phone</label> 
+        <input class="form-control" type="text" name="phoneNumber" />
+      </div>
+      <div class="form-group">
+        <label>Email</label> 
+        <input class="form-control" type="email" name="email" />
+      </div>
+
+      <legend> Location</legend>
+      <div class="form-group">
+        <label>Address:</label> 
+        <input class="form-control" type="text" name="address" />
+      </div>
+      <div class="form-group">
+        <label>Area:</label>
+        <select class="selectpicker form-control form-control-sm" name="areas">
+          <option value="head_quater">Head quarter</option>
+          <option value="kinondoni">Kinondoni office</option>
+          <option value="kawe">Kawe office</option>
+          <option value="magomeni"> Magomeni office </option>
+          <option value="tegeta"> Tegeta office </option>
+          <option value="ilala"> Ilala office  </option>
+          <option value="tabata"> Tabata office </option>
+          <option value="temeke"> Temeke office </option>
+          <option value="kimara"> Kimara office </option>
+          <option value="kibaha"> Kibaha office </option>
+          <option value="bagamoyo"> Bagamoyo office </option>
+          <option value="lowerRuvuPlant"> Lower ruvu plant </option>
+          <option value="upperRuvuPlant"> Upper ruvu plant </option>
+          <option value="mtoniPlant"> Mtoni plant </option>
+
+        </select>
+      </div>
+      </div>
+      <div class="col-sm-6">
+      <legend> Complaint</legend>
+
+      <div class="form-group">
+        <label>Category:</label>
+        <input type="text" />
+      </div>
+      <div class="form-group">
+        <label>Complaint Details</label>
+        <textarea class="form-control" rows="5" id="complaintDetails"></textarea>
+      </div>
+
+      <legend>Follow-up</legend>
+      <div class="form-group">
+        <label>Status:</label>
+        <select class="selectpicker form-control form-control-sm" name="status">
+          <option value="open"> Open </option>
+          <option value="inProgress"> In progress </option>
+          <option value="sentToArea"> Sent to area </option>
+          <option value="compeleted"> Completed </option> 
+        </select>
+      </div>
+      <div class="form-group">
+        <label>Actions taken:</label> 
+        <textarea class="form-control" rows="4" id="actionsTaken"></textarea>
+      </div>
+      <div class="form-group">
+        <label>Assigned to:</label> 
+        <select class="selectpicker form-control form-control-sm" name="assignedTo">
+          <option value="controlRoom"> Control room </option>
+          <option value="engineer"> Engineer </option>
+          <option value="customerCare"> Customer care </option>
+          <option value="billingOfficer"> Billing officer</option> 
+          <option value="commercialOfficer"> Commercial officer</option>
+        </select> 
+      </div>
+      <div class="form-group">
+        <label>Mode of forwarding:</label>
+        <select class="selectpicker form-control form-control-sm" name="forwadingMode">
+          <option value="email"> Email </option>
+          <option value="phone"> Phone</option>
+          <option value="sms"> SMS</option>
+        </select>
+      </div>
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" name="feedback"> Feedback to citizen 
+        </label>
+      </div>
+      </div>
+      </div>
+      </div>
+
       <button>Submit</button>
+
     </form>
     
   </div>
- 
+
 </div>
 <br><br>
