--- a/app/views/main.html
+++ b/app/views/main.html
@@ -55,6 +55,7 @@
           <tr>
             <th>Id</th>
             <th>Start date</th>
+            <th>Completed date</th>
             <th>Area</th>
             <th>Category</th>
             <th>Status</th>
@@ -65,6 +66,7 @@
           <tr>
             <th>Id</th>
             <th>Start date</th>
+            <th>Completed date</th>
             <th>Area</th>
             <th>Category</th>
             <th>Status</th>
@@ -75,6 +77,7 @@
           <tr>
             <td>1</td>
             <td>2011/02/04</td>
+            <td>2011/02/04</td>
             <td>Kimara</td>
             <td>Lack of water</td>
             <td>Open</td>
@@ -82,6 +85,7 @@
           </tr>
           <tr>
             <td>2</td>
+            <td>2011/07/25</td>
             <td>2011/07/25</td>
             <td>Tabata</td>
             <td>Leakage</td>
@@ -91,6 +95,7 @@
           <tr>
             <td>3</td>
             <td>2009/01/12</td>
+             <td>2009/01/12</td>
             <td>Kawe</td>
             <td>Disconnection</td>
             <td>Complete</td>
@@ -98,6 +103,7 @@
           </tr>
           <tr>
             <td>4</td>
+            <td>2009/04/12</td>
             <td>2009/04/12</td>
             <td>Kimara</td>
             <td>Illegal connection</td>
