--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,36 +9,19 @@
 
 
 <div class="col-sm-12">
-  <div class="pen-title" style="text-align:left;margin:10 0 10 10; padding:0px 10px 0px 10px;">
-    <h1>Welcome Admin</h1>
+  <div class="pen-title text-center" style="margin:10 0 10 10; padding:0px 10px 0px 10px;">
+    <h1>Welcome</h1>
   </div>
   <div class="container">
     <div class="row btn-row">
-      
       <div class="col-sm-6 btn btn-lg green btn-outline">
-        <a ng-href="./report/add" type="button" class="">New Report</a>
+        <a ng-href="#/report/add" type="button" class="">New Report</a>
       </div>
       <div class="col-sm-6 btn btn-lg green btn-outline">
-        <a ng-href="./report/" type="button" class="">Reports</a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-6 btn btn-lg green btn-outline">
-        <a ng-href="./settings" type="button" class="">Settings</a>
-      </div>
-      <div class="col-sm-6 btn btn-lg green btn-outline">
-        <a ng-href="./profile" type="button" class="">Profile</a>
+        <a ng-href="#/" type="button" class="">Reports</a>
       </div>
     </div>
-  </div>
-
-
 </div>
-
-
-</body>
-
-
 
 <div class="tb-body">
 
