--- a/app/views/main.html
+++ b/app/views/main.html
@@ -33,31 +33,23 @@
 
 
 
-      <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
+      <table id="example" class="table table-striped table-bordered table-hover" cellspacing="0" width="100%">
         <thead>
           <tr>
             <th>Id</th>
-            <th>Start date</th>
+            <th>Date</th>
+            <th>Phone</th>
             <th>Area</th>
             <th>Category</th>
             <th>Status</th>
             <th>Assigned to</th>
           </tr>
         </thead>
-        <tfoot>
-          <tr>
-            <th>Id</th>
-            <th>Date</th>
-            <th>Area</th>
-            <th>Category</th>
-            <th>Status</th>
-            <th>Assigned to</th>
-          </tr>
-        </tfoot>
         <tbody>
-          <tr ng-repeat="report in reports">
+          <tr ng-repeat="report in reports" ng-click="openReport(report.service_request_id)" style="cursor: pointer">
             <td>{{ report.service_request_id }}</td>
-            <td>{{ report.requested_datetime|date:'medium' }}</td>
+            <td><small>{{ report.requested_datetime|date:'short' }}</small></td>
+            <td>{{ report.phone }}</td>
             <td>{{ report.agency_responsible }}</td>
             <td>{{ report.service_name }}</td>
             <td>{{ report.status }}</td>
