make the whole button clickable

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -13,7 +13,7 @@
     <h1>Welcome</h1>
   </div>
   <div class="container">
-    <div class="row btn-row">
+    <div class="row btn-row" ng-click="openReport('add')">
       <div class="col-sm-6 btn btn-lg green btn-outline">
         <a ng-href="#/report/add" type="button" class="">New Report</a>
       </div>
