--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,13 +1,4 @@
 
-
-<!-- Form Mixin-->
-<!-- Input Mixin-->
-<!-- Button Mixin-->
-<!-- Pen Title-->
-
-<!-- Form Module-->
-
-
 <div class="col-sm-12">
   <div class="pen-title text-center" style="margin:10 0 10 10; padding:0px 10px 0px 10px;">
     <h1>Welcome</h1>
@@ -25,14 +16,31 @@
 
 <div class="tb-body">
 
-  <div id="example_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
+  <div class="dataTables_wrapper form-inline dt-bootstrap">
     <div class="pen-title mg">
       <h3>Reports</h3>
     </div>
+
+    <form class="form-inline" ng-submit="update()">
+     <div class="form-group">
+        <div class="input-group">
+          <div class="input-group-addon"><span class="glyphicon glyphicon-refresh" aria-hidden="true" ng-click="refresh()"></span></div>
+          <input type="search" class="form-control" placeholder="Search" ng-model="reportSearch.query">
+        </div>
+      </div>
+     <div class="form-group">
+        <select class="form-control" ng-model="reportSearch.field" ng-change="update()">
+          <option value="service_request_id">Report ID</option>
+          <option value="phone">Phone Number</option>
+        </select>
+      </div>
+     <div class="form-group">
+        <button class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search</button>
+      </div>
+    </form>
+    <hr>
+
     <div class="row"><div class="col-sm-12">
-
-
-
       <table id="example" class="table table-striped table-bordered table-hover" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -46,18 +54,18 @@
           </tr>
         </thead>
         <tbody>
-          <tr ng-repeat="report in reports" ng-click="openReport(report.service_request_id)" style="cursor: pointer">
-            <td>{{ report.service_request_id }}</td>
-            <td><small>{{ report.requested_datetime|date:'short' }}</small></td>
-            <td>{{ report.phone }}</td>
-            <td>{{ report.agency_responsible }}</td>
-            <td>{{ report.service_name }}</td>
-            <td>{{ report.status }}</td>
-            <td>{{ report.assigned_to }}</td>
+          <tr ng-repeat="report in reports" ngclick="openReport(report.service_request_id)">
+            <td><a ng-href="#/report/{{ report.service_request_id }}" class="text-muted">{{ report.service_request_id }}</a></td>
+            <td><a ng-href="#/report/{{ report.service_request_id }}" class="text-muted"><small>{{ report.requested_datetime|date:'short' }}</small></a></td>
+            <td><a ng-href="#/report/{{ report.service_request_id }}" class="text-muted">{{ report.phone }}</a></td>
+            <td><a ng-href="#/report/{{ report.service_request_id }}" class="text-muted">{{ report.agency_responsible }}</a></td>
+            <td><a ng-href="#/report/{{ report.service_request_id }}" class="text-muted">{{ report.service_name }}</a></td>
+            <td><a ng-href="#/report/{{ report.service_request_id }}" class="text-muted">{{ report.status }}</a></td>
+            <td><a ng-href="#/report/{{ report.service_request_id }}" class="text-muted">{{ report.assigned_to }}</a></td>
           </tr>
         </tbody>
       </table>
-
+      <div class="text-center text-warning">{{ pageStatusMessage }}</div>
     </div>
 
   </div>
