--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -98,4 +98,12 @@ legend {
     border-bottom: 1px solid #e5e5e5;
 }
 
+.custom{
+  padding:0.5%;
+  background:white;
+  border:1px solid steelblue;
+  border-radius:4px;
+  margin:1% 1% 0 0;
+}
+
 
