--- a/app/views/login.html
+++ b/app/views/login.html
@@ -10,7 +10,7 @@
 <!-- Form Module-->
 <div class="module form-module">
   <div class="">
-   
+
   </div>
   <div class="form" >
     <h2>Login to your account</h2>
@@ -18,6 +18,7 @@
     
     <div ng-controller="LoginCtrl">
       <div ng-show="error" class="alert alert-danger">{{error}}</div>
+      <div ng-show="logMessage" class="alert alert-success">{{logMessage}}</div>
       <form  novalidate >
         <input name="username" id="username" type="text" ng-model="username" placeholder="Username" required />
         <input name ="password" id="password" type="password" ng-model="password" placeholder="Password" required hidden/>
