edited first login page

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -5,7 +5,7 @@
 <!-- Pen Title-->
 <br>
 <div class="pen-title">
-  <h1>Feedback System</h1>
+  <h1>Login</h1>
 </div>
 <!-- Form Module-->
 <div class="module form-module">
@@ -13,7 +13,6 @@
 
   </div>
   <div class="form" >
-    <h2>Login to your account</h2>
 
     
     <div ng-controller="LoginCtrl">
