--- a/app/views/main.html
+++ b/app/views/main.html
@@ -29,7 +29,7 @@
         </div>
       </div>
      <div class="form-group">
-        <select class="form-control" ng-model="reportSearch.field" ng-change="update()">
+        <select class="form-control" ng-model="reportSearch.field" ng-change="if(reportSearch.query){update()}">
           <option value="service_request_id">Report ID</option>
           <option value="phone">Phone Number</option>
         </select>
