added logout function

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,10 @@
 
+<div >
+ <a  href="#/logout" 
+       class="btn btn-lg custom pull-right">Logout</a>
+</div>
 <div class="col-sm-12">
+ 
   <div class="pen-title text-center" style="margin:10 0 10 10; padding:0px 10px 0px 10px;">
     <h1>Welcome</h1>
   </div>
