--- a/app/views/reportadd.html
+++ b/app/views/reportadd.html
@@ -4,6 +4,10 @@
 <!-- Input Mixin-->
 <!-- Button Mixin-->
 <!-- Pen Title-->
+<div >
+ <a  href="#/logout" 
+       class="btn btn-lg custom pull-right">Logout</a>
+</div>
 <div class="pen-title">
   <h2>Create new report</h2>
 </div>
