--- a/app/views/reportdetail.html
+++ b/app/views/reportdetail.html
@@ -1,3 +1,7 @@
+<div >
+ <a  href="#/logout" 
+       class="btn btn-lg custom pull-right">Logout</a>
+</div>
 
 <div ng-if="report">
 <div class="pen-title">
