--- a/app/views/login.html
+++ b/app/views/login.html
@@ -4,7 +4,7 @@
 <!-- Button Mixin-->
 <!-- Pen Title-->
 <br>
-<div class="pen-title">
+<div class="pen-title" ng-init="logout = true">
   <h1>Login</h1>
 </div>
 <!-- Form Module-->
