--- a/app/views/login.html
+++ b/app/views/login.html
@@ -4,24 +4,29 @@
 <!-- Button Mixin-->
 <!-- Pen Title-->
 <br>
-<div class="pen-title">
-  <h1>Feedback System</h1>
+<div class="pen-title" ng-init="logout = true">
+  <h1>Login</h1>
 </div>
 <!-- Form Module-->
 <div class="module form-module">
   <div class="">
-   
-  </div>
-  <div class="form">
-    <h2>Login to your account</h2>
 
-    <form name="form" ng-submit="vm.login()" role="form">
-      <input name="username" id="username" type="text" placeholder="Username"/>
-      <input name ="password" id="password" type="password" placeholder="Password" hidden/>
-      <input type="submit" text="Submit" ng-disabled="form.$invalid || vm.dataLoading"/>
-    </form>
+  </div>
+  <div class="form" >
+
+    
+    <div ng-controller="LoginCtrl">
+      <div ng-show="error" class="alert alert-danger">{{error}}</div>
+      <div ng-show="logMessage" class="alert alert-success">{{logMessage}}</div>
+      <form  novalidate >
+        <input name="username" id="username" type="text" ng-model="username" placeholder="Username" required />
+        <input name ="password" id="password" type="password" ng-model="password" placeholder="Password" required hidden/>
+        <button type="submit" ng-click="login()" >Login</button>
+      </form>
+    </div>
   </div>
   
   <div class="cta"><a href="#">Forgot your password?</a></div>
 </div>
-  
+
+
